--- a/src/sharedComponents/MultilayerPercentageBar/multilayerPercentageBar.scss
+++ b/src/sharedComponents/MultilayerPercentageBar/multilayerPercentageBar.scss
@@ -12,6 +12,12 @@
     background-color: lighten($primary, 10%);;
   }
 
+  &.two-items {
+    .step-2 {
+      background-color: lighten($primary, 20%);;
+    } 
+  }
+
   .step-3 {
     background-color: lighten($primary, 20%);
   }
